style/style.css
/* ... */
.radio-container header {
  z-index: 1;
  padding-right: 2rem;
  padding-left: 2rem;
}

.radio-container .header__avenga-logo {
  display: inline-block;
  width: 10rem;
  height: 3rem;
  transition: 1s ease;
  opacity: 0.8;
  background-image: var(--avenga-logo);
  background-position: center;
  background-size: cover;
}

.radio-container .header__avenga-logo:hover {
  opacity: 1;
}

.radio-container .header__social-links {
  width: 9.5rem;
}

.social-link {
  display: inline-block;
  width: 2.75rem;
  height: 2.75rem;
  transition: 1s ease;
  border-radius: 50%;
  background-position: center;
  background-size: cover;
}

footer .social-link {
  width: 2rem;
  height: 2rem;
}

.social-link.facebook {
  opacity: 0.8;
  background-image: var(--facebook-icon);
}

.social-link.facebook:hover {
  opacity: 1;
}

.social-link.instagram {
  opacity: 0.8;
  background-image: var(--instagram-icon);
}

.social-link.instagram:hover {
  opacity: 1;
}

.social-link.linkedin {
  opacity: 0.8;
  background-image: var(--linkedin-icon);
}

.social-link.linkedin:hover {
  opacity: 1;
}

main {
  z-index: 1;
  overflow: auto;
  min-height: 16.5rem;
  padding: 0 1rem;
  text-align: center;
}

main .my_play {
  display: inherit;
  width: 15rem;
  min-width: 5rem;
  height: 15rem;
  min-height: 5rem;
  margin: 2rem 0;
  cursor: pointer;
  transition: none;
  opacity: 0.8;
  border: none;
  outline: none;
  background-color: transparent;
  background-image: url("../images/play.svg");
  background-position: center;
  background-size: 100% 100%;
}

main .my_play:hover {
  opacity: 1;
}

main .song-info p {
  font-size: 1.5rem;
  margin: 0;
  padding: 0;
  transition: 1s ease;
  text-align: center;
}

.bold-font {
  font-family: 'TT Hoves DemiBold', sans-serif;
}

.regular-font {
  font-family: 'TT Hoves Regular', sans-serif;
}

footer {
  z-index: 1;
  width: 100%;
  padding-bottom: 4rem;
}

.footer__social-links {
  width: 8rem;
}

@keyframes snow {
  0% {
    background-position: 0px 0px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
  }
  100% {
    background-position: 3400px 2000px, 6800px 4000px, 10200px 6000px, 13600px 8000px, 17000px 10000px;
  }
}

@media (orientation: landscape) and (max-height: 567px) {
  main .my_play {
    max-width: 5rem;
    max-height: 5rem;
    margin: 0.5rem 0;
  }

  footer {
    padding-bottom: 3rem;
  }
}

@media (max-width: 900px) {
  main .my_play {
    width: 10rem;
    height: 10rem;
    margin: 1rem 0;
  }

  main .song-info p {
    font-size: 1rem;
  }
}

@media (max-width: 576px) {
  .radio-container header {
    padding-right: 1.5rem;
    padding-left: 1.5rem;
  }

  .radio-container .header__avenga-logo {
    width: 142px;
    height: 43px;
  }

  footer {
    padding-bottom: 3rem;
  }
}

